fixed light/dark mode toggle. Added resume download icon.

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ html{
     padding: 5px;
 }
 body{
-    /*background-color: #343434;*/
     background: rgb(52,52,52);
     background: radial-gradient(circle, rgba(52,52,52,1) 0%, rgba(6,6,6,1) 52%);
     color: white;
@@ -16,6 +15,15 @@ hr {
 }
 #page-header {
     font-size: 3.5vw;
+    display: inline-block;
+}
+#resume-download {
+    display: inline-block;
+    margin-left: 3vw;
+    color: rgb(0, 131, 213);
+}
+#resume-download:hover  {
+    color: white;
 }
 #main-nav {
     font-size: 1.6vw;
@@ -26,7 +34,6 @@ hr {
     border: 2px solid rgb(0, 156, 255);
     background-color: rgb(0, 131, 213);
     border-radius: 3px;
-    /*padding: 10px 15px 7px 15px;*/
     padding: 1vw;
     margin: 8px;
     font-size: 1.6vw;
@@ -37,13 +44,11 @@ hr {
 }
 .main-button:hover {
     background-color: rgb(0, 156, 255);
-    /*padding: 10px 15px 7px 15px;*/
 }
 .fa {
     margin-right: 5px;
     font-size: 2.3vw;
     vertical-align: text-bottom;
-    /*min-font-size: 1.4vw;*/
 }
 #left-panel {
     font-size: 1.2vw;
@@ -72,6 +77,7 @@ hr {
     color: rgb(0, 156, 255);
     font-size: 3vw;
 }
+/* Creates the blue line after headers */
 .experience-header:after {
     content:"";
     display: inline-block;
@@ -136,23 +142,29 @@ hr {
     position: relative;
     top: -1vw;
 }
-/* The switch - the box around the slider */
-.switch {
+/* The light/dark mode toggle */
+.toggle-div {
     position: absolute;
     top: 3vw;
     right: 3vw;
+}
+.toggle-text-before, .toggle-text-after {
+    display: inline;
+    font-size: 1.5vw;
+}
+
+.switch {
+    position: relative;
     display: inline-block;
     width: 60px;
     height: 34px;
+    vertical-align: middle;
 }
-/* Hide default HTML checkbox */
 .switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
-
-/* The slider */
 .slider {
     position: absolute;
     cursor: pointer;
@@ -160,12 +172,11 @@ hr {
     left: 0;
     right: 0;
     bottom: 0;
-    /*background-color: #ccc;*/
     background-color: #2196F3;
     -webkit-transition: .4s;
     transition: .4s;
+    border-radius: 34px;
 }
-
 .slider:before {
     position: absolute;
     content: "";
@@ -174,33 +185,22 @@ hr {
     left: 4px;
     bottom: 4px;
     background-color: white;
-    /*background-color: #2196F3;*/
     -webkit-transition: .4s;
     transition: .4s;
+    border-radius: 50%;
 }
-
 input:checked + .slider {
-    /*background-color: #2196F3;*/
-    background-color: #ccc;
+    background-color: #656565;
 }
-
 input:focus + .slider {
-    /*box-shadow: 0 0 1px #2196F3;*/
     background-color: #ccc;
 }
-
 input:checked + .slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
 }
-/* Rounded sliders */
-.slider.round {
-    border-radius: 34px;
-}
-.slider.round:before {
-    border-radius: 50%;
-}
+
 @media only screen and (max-width: 899px) {
     #page-header {font-size: 5vw;}
     .main-button {font-size: 3vw;}
@@ -212,10 +212,14 @@ input:checked + .slider:before {
         width: 100%;
         margin-right: revert;
     }
-    .experience-header, .details-header {font-size: 4vw;}
-    .experience-section, .details-section {font-size: 2vw;}
+    .experience-header, .details-header {font-size: 5vw;}
+    .experience-section, .details-section {font-size: 2.6vw;}
     .experience-section .main-button {
         display: inline;
     }
     .fa { font-size: 3.5vw; }
+    .toggle-text-before, .toggle-text-after {
+        font-size: 2.8vw;
+    }
+    .tool-tag img { vertical-align: middle;}
 }
